# context

./: .gitignore  .swift-format  AGENTS.md  LICENSE  README.md  justfile  l.txt  release.sh
.github/workflows/: ci.yml  release.yml
app/: AppIcon.icns  Info.plist  Package.swift
app/Sources/Context/: AppState.swift  ChatTab.swift  ChatView.swift  ComposerView.swift  ContextApp.swift  Database.swift  MessageBubble.swift  MessageSearch.swift  ModelParametersView.swift  Models.swift  OllamaClient.swift  RootView.swift  SettingsView.swift  SidebarView.swift  StreamingTextBuffer.swift
app/Tests/ContextTests/: AppStateBehaviorTests.swift  DatabaseTests.swift  MessageSearchTests.swift  ModelParametersTests.swift  OllamaClientTests.swift  StreamingTextBufferTests.swift
core/: Cargo.toml
core/examples/: smoke.rs
core/src/: chat.rs  db.rs  lib.rs
scripts/: install.sh  render-logo.swift
