[package]
name = "context-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "context_core"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "uniffi-bindgen-swift"
path = "src/bin/uniffi-bindgen-swift.rs"

[dependencies]
ollama-rs = { version = "0.3.5", features = ["stream"] }
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
uniffi = { version = "0.32", features = ["cli", "tokio"] }

[profile.release]
lto = "thin"
